Tue Sep 19 18:42:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement get_maxweight() and recalc_maxweight() in EmptyPostList
	  so that they don't attempt to use an invalid IRWeight object.
	  This fixes an assertion error if a list of terms which are not
	  in the database are combined in a query.

Tue Sep 19 15:55:34 BST 2000 Olly Betts

	* api_db.cc: Added query() helper functions

	* Added rsetmultidb3 to demonstrate assertion failiure in stats.h.
 
Tue Sep 19 15:50:26 BST 2000 Olly Betts

	* testsuite.cc: output newline after skipped test.

Tue Sep 19 15:33:24 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now run apitest and internaltest with malloccheck if possible

Tue Sep 19 13:42:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a memory leak in the Sleepycat backend.

Tue Sep 19 13:16:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* malloc tracking now copes with free(0).

	* Added OM_MALLOC_TRAP[_COUNT], similar to OM_NEW_TRAP[_COUNT].

	* Moved an Assertion in OmStem to somewhere more useful.

	* Fixed a memory leak in the French stemmer

Tue Sep 19 12:40:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add CME_FIND_HSTRERROR to acinclude.m4, by adding it to lists in
	  buildall and configure.in.

Tue Sep 19 12:11:58 BST 2000 Olly Betts

	* More work on tests.

Tue Sep 19 10:50:43 BST 2000 Olly Betts

	* More tests in apitest and includetest changed to use TEST_* macros.

Tue Sep 19 10:14:32 BST 2000 Olly Betts

	* Include genacinclude.sh in the distribution from the correct
	  directory.

Mon Sep 18 19:13:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various work on Quartz - logfiles, putting general structure in
	  place, etc.

Mon Sep 18 19:10:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Slightly more accurate malloc/realloc implementation

Mon Sep 18 18:35:32 BST 2000 Olly Betts
