@@ -1,3 +1,10 @@
+Tue Sep 19 19:13:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added OmNeedRecoveryError, to signal that a database needs a
+	  recovery step to be performed.
+
+	* Use $(LN_S) instead of ln -s in test/Makefile.am
+
 Tue Sep 19 18:42:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Implement get_maxweight() and recalc_maxweight() in EmptyPostList
